--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/libinthomas33/product-list/issues"
   },
-  "homepage": "https://github.com/libinthomas33/product-list#readme"
+  "homepage": "https://github.com/libinthomas33/product-list#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.7"
+  }
 }
